--- a/loggedIn.html
+++ b/loggedIn.html
@@ -10,5 +10,6 @@
     <h2 id="userName"></h2>
     <h2 id="userEmail"></h2>
     <img id="userProfilePicture">
+    <script src = "./index.js" type = "module"></script>
 </body>
 </html>
